2010-02-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs:
	  Fixed search update bug.

2010-02-16  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/GotoLineNumberWidget.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.GotoLineNumberWidget.cs:
	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs:
	  Worked on the search box/goto line number box.

2010-02-16  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Fixed
	  search & replace widget flickering problem.

2010-02-15  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor/searchoptions.png:
	* MonoDevelop.SourceEditor/searchoptions.svg:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Added
	  search options icon.

2010-02-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/ClassQuickFinder.cs:
	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/PinnedWatchWidget.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs:
	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Worked
	  on search & replace widget.

2010-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.SourceEditor.csproj:
	* MonoDevelop.SourceEditor/DropDownBox.cs:
	* MonoDevelop.SourceEditor/DropDownBoxListWindow.cs: Remove
	  dead code.

2010-02-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: fixed
	  flickering in inform label update.

2010-02-12  Mike Krüger  <mkrueger@novell.com>

	* gtk-gui/gui.stetic: