@@ -429,6 +429,9 @@ But I leave it in in the case I've missed something. Mike
 				replaceHistory = null;
 			}
 			if (widget != null) {
+				if (result != null && widget.TextEditor.Caret.Offset == result.EndOffset) {
+					widget.TextEditor.SetSelection (result.Offset, result.EndOffset);
+				}
 				widget.TextEditor.Repaint ();
 				widget = null;
 			}
@@ -453,17 +456,12 @@ But I leave it in in the case I've missed something. Mike
 		void GotoResult (SearchResult result)
 		{
 			try {
-				if (result == null) {
-					widget.TextEditor.ClearSelection ();
+				if (result == null) 
 					return;
-				}
-//				int oldOffset = widget.TextEditor.Caret.Offset;
 				widget.TextEditor.Caret.Offset = result.EndOffset;
-				var oldRange = widget.TextEditor.SelectionRange;
-				widget.TextEditor.SelectionRange = result;
+				widget.TextEditor.TextViewMargin.MainSearchResult = result;
 				widget.TextEditor.CenterToCaret ();
-				if (oldRange == null || oldRange.Offset != result.Offset)
-					widget.TextEditor.AnimateSearchResult (result);
+				widget.TextEditor.AnimateSearchResult (result);
 			} catch (System.Exception) { 
 			}
 		}
